Enforce nullability